# amg_desk_ai

./: .gitignore
.cursor/rules/: fastapi.mdc  react.mdc  supabase.mdc
agm-desk-ai/: .env.example  .gitignore  README_ENV.md  pyproject.toml
agm-desk-ai/agent/: main.py
agm-desk-ai/agent/core/: config.py  exceptions.py
agm-desk-ai/agent/prompts/: __init__.py  system_prompts.py
agm-desk-ai/agent/services/: action_executor.py  ai_processor.py  realtime_listener.py  request_validator.py
agm-desk-ai/scripts/: update-rate-limit.sh
agm-simulated-enviroment/backend/: .env.example  .gitignore  docker-compose.yml  pyproject.toml
agm-simulated-enviroment/backend/alembic/: env.py
agm-simulated-enviroment/backend/app/: main.py
agm-simulated-enviroment/backend/docs/: CONEXION_FUNCIONAL.md  DATABASE_SETUP.md  VERIFY_MIGRATIONS.md
agm-simulated-enviroment/backend/scripts/: check-db.sh  iniciar-bd-local.sh  run-migrations.sh  setup-db.sh  setup-rls-username.sql  test-rls-username.sql  verify-connection.sh  verify-tables-simple.sh  verify-tables.py
agm-simulated-enviroment/frontend/: .gitignore  INSTALLATION.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
docs/: COMANDOS_CURL_ENDPOINTS.md  ESTADO_IMPLEMENTACION.md  GUIA_EJECUCION_LOCAL.md  INSTRUCCIONES_BD_LOCAL.md  NAMING_MAPPING.md  README.md  flujo actual.md
docs/security/: README.md  SECURITY_AUDIT_REPORT.md
specs/: 01_setup.md  02_dev_plan.md  03_backend_detailed.md  04_frontend_detailed.md  05_agent_ai_detailed.md  ANALISIS_ARQUITECTURA_AGENTE_AI.md
(+37 files in other folders)
