[project]
name = "agm-desk-ai"
version = "0.1.0"
description = "Agente AI (Orquestador) para AGM Desk AI"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "supabase>=2.0.0",
    "httpx>=0.25.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

